--- a/views/item.ejs
+++ b/views/item.ejs
@@ -13,6 +13,8 @@
         <link href="assets/css/auntie.css" rel="stylesheet"> 
         <link href="assets/css/jquery.flexdatalist.min.css" rel="stylesheet"> 
         <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.4.3/cropper.min.css" rel="stylesheet"> 
+        <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+
         <style>#my-image,
 #use {
     display: none;
@@ -20,7 +22,10 @@
 
 .bootstrap-tagsinput {
     width: 100%;
-}</style>
+}
+
+
+</style>
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
@@ -74,24 +79,29 @@
             <div class="row" style="height: 30px;"></div>             
         </div>         
         <main role="main" class="container">
-            <!-- Modal -->
-            <div class="modal fade" id="myModal" role="dialog">
-                <div class="modal-dialog modal-lg">   
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                    <div class="modal-body">
-                        <div style="width: 100%;">
-                            <img id="cropperImage" style="width: 100%;" src="">
-                        </div>
-                    </div>                   
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" id="cropbtn">Crop</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    </div>
-                    </div>      
-                </div>
-            </div>
-            <!-- Modal end -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"> 
+                    <div class="modal-dialog modal-lg" role="document"> 
+                        <div class="modal-content" > 
+                            <div class="modal-header"> 
+                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5> 
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"> 
+                                    <span aria-hidden="true">&times;</span> 
+                                </button>                             
+                            </div>                         
+                            <div class="modal-body" >
+                                <div class="container-fluid" style="margin-left: -15px;" >
+                                    <img id="cropperImage" style="max-width: 100%;"  src="">
+                                </div>
+                            </div>                         
+                            <div class="modal-footer"> 
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>                             
+                                <button id="cropbtn" type="button" class="btn btn-primary" data-dismiss="modal">Crop!</button>                             
+                            </div>                         
+                        </div>                     
+                    </div>                 
+                </div>       
+
+
 
             <div class="col-sm-6 offset-sm-3">
                 <h1><br>Upload item</h1>
@@ -177,6 +187,7 @@
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>         
         <script src="assets/js/jquery.flexdatalist.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.4.3/cropper.min.js"></script>
+        <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>        
 
         <script>
         var cropper0;
@@ -190,7 +201,7 @@
             });
         });
 
-        $('input').on('change', function() {
+        $('input:file').on('change', function() {
             curPos = this.id.match(/\d+/)[0];
 
             var index = inputInfo.map(function(e) { return e.id; }).indexOf(curPos);
@@ -208,24 +219,27 @@
                 cropper0.destroy();
             }
 
-            oFReader.onload = function (oFREvent) {
-                document.getElementById('cropperImage').src = oFREvent.target.result;
-                var image = document.getElementById('cropperImage');
-                cropper0 = new Cropper(image, {
-                    aspectRatio: 1 / 1
-                });
+            oFReader.onload = function (oFREvent) {    
                 $('#myModal').modal('show');
+                var image = document.getElementById('cropperImage');
+                image.src = oFREvent.target.result;
             };   
+            this.value = null;
         });
-        
-
+      
+        $('#myModal').on('shown.bs.modal', function () {
+            var image = document.getElementById('cropperImage');
+ 
+            cropper0 = new Cropper(image, {
+                    aspectRatio: 1 / 1,
+                    responsive: true
+            });
+        });
 
         var showImg = document.getElementById('preview-0');  
         var formData1  = $("form[id*='formData1']")[0];
 
-
         $("#cropbtn").click(function() {
-
             var index = inputInfo.map(function(e) { return e.id; }).indexOf(curPos);
 
             console.log(curPos);
@@ -272,28 +286,6 @@
             });
         };
 
-        function PreviewImage() {
-            var oFReader = new FileReader();
-            oFReader.readAsDataURL(document.getElementById("upload1").files[0]);
-
-            oFReader.onload = function (oFREvent) {
-                document.getElementById('cropperImage').src = oFREvent.target.result;
-                var image = document.getElementById('cropperImage');
-                cropper0 = new Cropper(image, {
-                    aspectRatio: 1 / 1,
-                    crop(event) {
-                        /*
-                        console.log(event.detail.x);
-                        console.log(event.detail.y);
-                        console.log(event.detail.width);
-                        console.log(event.detail.height);
-                        console.log(event.detail.rotate);
-                        console.log(event.detail.scaleX);
-                        console.log(event.detail.scaleY);*/
-                    },
-                });
-            };
-        };
     </script>         
     </body>     
 </html>
