--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
             </button>             
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault"> 
                 <form class="form-inline my-2 my-lg-0 mt-lg-0 mb-lg-0 ml-lg-5" action="/search" method="post"> 
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> 
+                    <input name="se" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> 
                     <div class="dropdown"> 
                         <button class="btn dropdown-toggle btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Location</button>                         
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> 
@@ -73,10 +73,13 @@
                     </div>
                     <div class="row">
                         <div style="width: 100%;">
+                        <form action="/search" method="post">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search for..." aria-label="Search for..."/>
-                                <span class="input-group-btn"> <button class="btn btn-secondary" type="button">Go!</button> </span>
+                                    <input name="searchInput" type="text" class="form-control" placeholder="Search for..." aria-label="Search for..."/>
+                                    <span class="input-group-btn"> <button class="btn btn-secondary" type="submit">Go!</button> </span>
                             </div>
+                        </form>
+
                         </div>
                     </div>                     
                 </div>
