--- a/views/dash.ejs
+++ b/views/dash.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
         <meta name="description" content=""> 
         <meta name="author" content=""> 
-        <title>Offcanvas template for Bootstrap</title>         
+        <title>Auntie - Search for retail goodies</title>         
         <!-- Bootstrap core CSS -->         
         <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <!-- Custom styles for this template -->         
@@ -33,17 +33,8 @@
                 <span class="navbar-toggler-icon"></span> 
             </button>             
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault"> 
-                <form class="form-inline my-2 my-lg-0 mt-lg-0 mb-lg-0 ml-lg-5"> 
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> 
-                    <div class="dropdown"> 
-                        <button class="btn dropdown-toggle btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Location</button>                         
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> 
-                            <a class="dropdown-item" href="#">North</a> 
-                            <a class="dropdown-item" href="#">South</a> 
-                            <a class="dropdown-item" href="#">East</a> 
-                            <a class="dropdown-item" href="#">West</a> 
-                        </div>                         
-                    </div>                     
+                <form class="form-inline my-2 my-lg-0 mt-lg-0 mb-lg-0 ml-lg-5" action="/search" method="get"> 
+                    <input name="q" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> 
                     <button class="btn my-2 my-sm-0 btn-light" type="submit">Search</button>                     
                 </form>                 
                 <ul class="navbar-nav ml-auto"> 
@@ -73,7 +64,7 @@
                     <% }  %>
                 </ul>                 
             </div>             
-        </nav>          
+        </nav>         
         <div class="container"> 
             <div class="row" style="height: 30px;"></div>             
         </div>         
@@ -104,7 +95,9 @@
                                                 <td class="align-middle "><%= listings[i].title %></td>
                                                 <td class="text-right align-middle">
                                                     <a class="btn btn-sm btn-outline-info" href="/details/<%= listings[i].url %>"><i class="fas fa-info-circle"></i>Details</a> 
-                                                    <a class="btn btn-sm btn-danger" href="#"><i class="fas fa-trash-alt"></i>Delete</a> 
+                                                    <a class="btn btn-sm btn-danger delete" href="/delete/details/<%= listings[i].url %>" 
+                                                        data-confirm="Confirm delete <%= listings[i].title %>?"
+                                                        ><i class="fas fa-trash-alt"></i>Delete</a> 
                                                 </td>
                                         </tr>
                                     <% } %>
@@ -132,13 +125,28 @@
             $('[data-toggle="offcanvas"]').on('click', function () {
                 $('.offcanvas-collapse').toggleClass('open');
             });
+
+            var deleteLinks = document.querySelectorAll('.delete');
+
+            for (var i = 0; i < deleteLinks.length; i++) {
+            deleteLinks[i].addEventListener('click', function(event) {
+                event.preventDefault();
+                var choice = confirm(this.getAttribute('data-confirm'));
+                if (choice) {
+                    window.location.href = this.getAttribute('href');
+                }
+            });
+            }
+
         });
 
+        /*
         jQuery(document).ready(function($) {
         $(".clickable-row").click(function() {
                 window.location = $(this).data("href");
             });
-        });
+        });*/
+
     </script>         
     </body>     
 </html>
