--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
         <meta name="description" content=""> 
         <meta name="author" content=""> 
-        <title>Offcanvas template for Bootstrap</title>         
+        <title>Auntie - Search for retail goodies</title>         
         <!-- Bootstrap core CSS -->         
         <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <!-- Custom styles for this template -->         
@@ -21,15 +21,6 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault"> 
                 <form class="form-inline my-2 my-lg-0 mt-lg-0 mb-lg-0 ml-lg-5" action="/search" method="get"> 
                     <input name="q" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> 
-                    <div class="dropdown"> 
-                        <button class="btn dropdown-toggle btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Location</button>                         
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> 
-                            <a class="dropdown-item" href="#">North</a> 
-                            <a class="dropdown-item" href="#">South</a> 
-                            <a class="dropdown-item" href="#">East</a> 
-                            <a class="dropdown-item" href="#">West</a> 
-                        </div>                         
-                    </div>                     
                     <button class="btn my-2 my-sm-0 btn-light" type="submit">Search</button>                     
                 </form>                 
                 <ul class="navbar-nav ml-auto"> 
