--- a/views/search.ejs
+++ b/views/search.ejs
@@ -6,60 +6,51 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
         <meta name="description" content=""> 
         <meta name="author" content=""> 
-        <title>Offcanvas template for Bootstrap</title>         
+        <title>Auntie - Search for retail goodies</title>         
         <!-- Bootstrap core CSS -->         
         <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <!-- Custom styles for this template -->         
         <link href="assets/css/auntie.css" rel="stylesheet"> 
     </head>     
     <body class="bg-light"> 
-            <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
-                    <a class="navbar-brand mr-auto mr-lg-0" href="/">Auntie</a> 
-                    <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas"> 
-                        <span class="navbar-toggler-icon"></span> 
-                    </button>             
-                    <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault"> 
-                        <form class="form-inline my-2 my-lg-0 mt-lg-0 mb-lg-0 ml-lg-5"> 
-                            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> 
-                            <div class="dropdown"> 
-                                <button class="btn dropdown-toggle btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Location</button>                         
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> 
-                                    <a class="dropdown-item" href="#">North</a> 
-                                    <a class="dropdown-item" href="#">South</a> 
-                                    <a class="dropdown-item" href="#">East</a> 
-                                    <a class="dropdown-item" href="#">West</a> 
-                                </div>                         
-                            </div>                     
-                            <button class="btn my-2 my-sm-0 btn-light" type="submit">Search</button>                     
-                        </form>                 
-                        <ul class="navbar-nav ml-auto"> 
-                            <li class="nav-item"> 
-                                <a class="nav-link" href="/deals">Deals</a> 
-                            </li>                     
-                            <li class="nav-item"> 
-                                <a class="nav-link" href="/events">Events</a> 
-                            </li>                
-                            <% if (!user) { %>
-                            <li class="nav-item"> 
-                                <a class="nav-link" href="/register">Register</a> 
-                            </li>   
-                            <li class="nav-item"> 
-                                <a class="nav-link" href="/login">Login</a> 
-                            </li>    
-                            <% }  %>                  
-                            <% if (user) { %>
-                                <li class="nav-item dropdown "> 
-                                    <a class="nav-link dropdown-toggle" href="/dashboard" id="dropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Controls</a> 
-                                    <div class="dropdown-menu" aria-labelledby="dropdown01"> 
-                                        <a class="dropdown-item" href="/profile">Profile</a> 
-                                        <a class="dropdown-item" href="/settings">Settings</a> 
-                                        <a class="dropdown-item" href="/logout">Log out</a> 
-                                    </div>                         
-                                </li>                         
-                            <% }  %>
-                        </ul>                 
-                    </div>             
-                </nav>            
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
+            <a class="navbar-brand mr-auto mr-lg-0" href="/">Auntie</a> 
+            <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas"> 
+                <span class="navbar-toggler-icon"></span> 
+            </button>             
+            <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault"> 
+                <form class="form-inline my-2 my-lg-0 mt-lg-0 mb-lg-0 ml-lg-5" action="/search" method="get"> 
+                    <input name="q" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> 
+                    <button class="btn my-2 my-sm-0 btn-light" type="submit">Search</button>                     
+                </form>                 
+                <ul class="navbar-nav ml-auto"> 
+                    <li class="nav-item"> 
+                        <a class="nav-link" href="/deals">Deals</a> 
+                    </li>                     
+                    <li class="nav-item"> 
+                        <a class="nav-link" href="/events">Events</a> 
+                    </li>                
+                    <% if (!user) { %>
+                    <li class="nav-item"> 
+                        <a class="nav-link" href="/register">Register</a> 
+                    </li>   
+                    <li class="nav-item"> 
+                        <a class="nav-link" href="/login">Login</a> 
+                    </li>    
+                    <% }  %>                  
+                    <% if (user) { %>
+                        <li class="nav-item dropdown "> 
+                            <a class="nav-link dropdown-toggle" href="/dashboard" id="dropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Controls</a> 
+                            <div class="dropdown-menu" aria-labelledby="dropdown01"> 
+                                <a class="dropdown-item" href="/profile">Profile</a> 
+                                <a class="dropdown-item" href="/settings">Settings</a> 
+                                <a class="dropdown-item" href="/logout">Log out</a> 
+                            </div>                         
+                        </li>                         
+                    <% }  %>
+                </ul>                 
+            </div>             
+        </nav>             
         <div class="container"> 
             <div class="row" style="height: 30px;"></div>             
         </div>         
