--- a/views/details.ejs
+++ b/views/details.ejs
@@ -38,7 +38,24 @@
     object-fit: cover;
     border-radius: 4px;
     cursor: zoom-in;
-}</style>
+}
+
+#specs {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#specs td,
+#specs th {
+    border: 1px solid #ddd;
+}
+
+#specs tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+</style>
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
@@ -120,13 +137,22 @@
                                 </dd>
                             </dl>
                             <dl class="param param-feature">
-                                <dt class="pr-auto">Model#</dt>
+                                <dt class="pr-auto">Model</dt>
                                 <dd>12345611</dd>
                             </dl>                             
-                            <dl class="param param-feature">
-                                <dt>Color</dt>
-                                <dd>Black and white</dd>
-                            </dl>                             
+                            <dl class="param param-feature"> 
+                                <dt>Product Specifications</dt> 
+                                <table id="specs">
+                                    <tr>
+                                        <td>Alfreds Futterkiste</td>
+                                        <td>Maria Anders</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Alfreds Futterkiste</td>
+                                        <td>Maria Anders</td>
+                                    </tr>
+                                </table>                                 
+                            </dl>                                                        
                             <dl class="param param-feature">
                                 <dt>Location</dt>
                                 <dd>Russia, USA, and Europe</dd>
