--- a/views/item.ejs
+++ b/views/item.ejs
@@ -130,21 +130,23 @@ html, body {
                     <label>Product Specifications</label>
                     <div data-role="dynamic-fields">
                         <div class="form-inline">
-                            <div class="form-group">
-                                <label class="sr-only" for="spec-name">Field Name</label>
-                                <input name="specNames[]" type="text" class="form-control" id="spec-name" placeholder="Specification">
-                            </div>
-                            <span>-</span>
-                            <div class="form-group">
-                                <label class="sr-only" for="spec-value">Field Value</label>
-                                <input name="specValues[]" type="text" class="form-control" id="spec-value" placeholder="Details">
-                            </div>
-                            <button class="prodbtn btn btn-primary" data-role="remove">
-                                -
-                            </button>
-                            <button class="prodbtn btn btn-danger" data-role="add">
-                                +
-                            </button>
+                            <row>
+                                <div class="form-group">
+                                    <label class="sr-only" for="spec-name">Field Name</label>
+                                    <input name="specNames[]" type="text" class="form-control" id="spec-name" placeholder="Specification">
+                                </div>
+                                <span>-</span>
+                                <div class="form-group">
+                                    <label class="sr-only" for="spec-value">Field Value</label>
+                                    <input name="specValues[]" type="text" class="form-control" id="spec-value" placeholder="Details">
+                                </div>
+                                <button  class="prodbtn btn btn-secondary" data-role="remove" type="button">
+                                    -
+                                </button>
+                                <button class="prodbtn btn btn-danger" data-role="add" type="button">
+                                    +
+                                </button>
+                            </row>
                         </div>  <!-- /div.form-inline -->
                     </div>  <!-- /div[data-role="dynamic-fields"] -->
                     <div class="container mt-5">
@@ -233,29 +235,24 @@ html, body {
                 $('.offcanvas-collapse').toggleClass('open');
             });
 
-            $(document).on(
-                'click',
-                '[data-role="dynamic-fields"] > .form-inline [data-role="remove"]',
-                function(e) {
-                    e.preventDefault();
-                    $(this).closest('.form-inline').remove();
-                }
-            );
-            // Add button click
-            $(document).on(
-                'click',
-                '[data-role="dynamic-fields"] > .form-inline [data-role="add"]',
-                function(e) {
-                    e.preventDefault();
-                    var container = $(this).closest('[data-role="dynamic-fields"]');
-                    new_field_group = container.children().filter('.form-inline:first-child').clone();
-                    new_field_group.find('input').each(function(){
-                        $(this).val('');
-                    });
-                    container.append(new_field_group);
-                }
-            );
+            $('[data-role="dynamic-fields"]').on('click', '[data-role="add"]', function (e) {
+                e.preventDefault();
+                var container = $(this).closest('[data-role="dynamic-fields"]');
+                new_field_group = container.children().filter('.form-inline:first-child').clone();
+                new_field_group.find('input').each(function(){
+                    $(this).val('');
+                });
+                container.append(new_field_group);
+            });
+
+            $('[data-role="dynamic-fields"]').on('click', '[data-role="remove"]', function (e) {
+                e.preventDefault();
+                $(this).closest('.form-inline').remove();
+            });
+
         });
+
+
 
         $('input:file').on('change', function() {
             curPos = this.id.match(/\d+/)[0];
@@ -316,13 +313,13 @@ html, body {
                 showImg.style.display = "block";
                 showImg.src = imagetemp;  
                 inputInfo[index].blob = blob;
-
             }, inputInfo[index].type);
         });  
         
         
         function PostForm()
         {
+            console.log("Posting");
             var data = new FormData($("form[id*='formData1']")[0]);
             for(var i = 0; i< inputInfo.length; i++){
                 data.append("cdata", inputInfo[i].blob, inputInfo[i].name);
@@ -345,6 +342,7 @@ html, body {
             });
         };
 
+       
     </script>         
     </body>     
 </html>
