Done rich text editing

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -134,7 +134,7 @@
                             <dl class="item-property">
                                 <dt>Description</dt>
                                 <dd>
-                                    <pre><%= listing.description %></pre>
+                                    <%- listing.html %>
                                 </dd>
                             </dl>
                             <dl class="param param-feature"> 
