--- a/views/dash.ejs
+++ b/views/dash.ejs
@@ -68,7 +68,7 @@
         <div class="container"> 
             <div class="row" style="height: 30px;"></div>             
         </div>         
-        <button class="mdc-fab app-fab--absolute bg-danger" aria-label="add" onclick="location.href='/item';">
+        <button class="mdc-fab app-fab--absolute bg-danger" aria-label="add" onclick="location.href='/post';">
             <span class="mdc-fab__icon material-icons">add</span>
         </button>
         <main role="main" class="container"> 
