--- a/views/recommend.ejs
+++ b/views/recommend.ejs
@@ -65,7 +65,7 @@
                 <h1>Recommend event!</h1>
                 <form action="/events/recommend" method="post" enctype="multipart/form-data">
                     <div class="form-group">Event Title
-                        <input type="text" class="form-control" name="title">
+                        <input type="text" class="form-control" name="topics">
                     </div>
                     <div class="form-group">Company/Organization
                         <input type="text" class="form-control" name="company">
@@ -78,13 +78,21 @@
                     </div>
                     <div class="form-group">
                         <label>Description</label>
-                        <textarea type="text" rows="6" class="form-control" name="edesc" id="edesc"></textarea>
+                        <textarea type="text" rows="6" class="form-control" name="description"  id="edesc"></textarea>
+                    </div>
+                    <div class="form-group">Venue
+                        <br>
+                        <input type="text" class="form-control" name="eventVenue">
+                    </div>
+                    <div class="form-group">Venue Postal Code
+                        <br>
+                        <input type="text" class="form-control" name="eventpostal">
                     </div>
                     <div class="form-group">Upload Poster
                         <br>
-                        <input type="file" id="file" name="file" accept="image/png, image/jpeg">
+                        <input type="file" id="file" name="efile" accept="image/png, image/jpeg">
                     </div>
-                    <div class="form-group">Event url:
+                    <div class="form-group">Event website:
                         <br>
                         <input type="text" class="form-control" name="eventUrl">
                     </div>
@@ -92,7 +100,7 @@
                 </form>
                 <hr>
             </div>
-        </main>         
+        </main>       
         <footer class="pt-5 text-muted text-center text-small my-5"> 
             <p class="mb-1">&copy; 2019 Auntie.cc</p> 
             <ul class="list-inline"> 
