--- a/views/recommend.ejs
+++ b/views/recommend.ejs
@@ -65,7 +65,7 @@
                 <h1>Recommend event!</h1>
                 <form action="/events/recommend" method="post" enctype="multipart/form-data">
                     <div class="form-group">Event Title
-                        <input type="text" class="form-control" name="topics">
+                        <input type="text" class="form-control" name="title">
                     </div>
                     <div class="form-group">Company/Organization
                         <input type="text" class="form-control" name="company">
@@ -86,7 +86,7 @@
                     </div>
                     <div class="form-group">Venue Postal Code
                         <br>
-                        <input type="text" class="form-control" name="eventpostal">
+                        <input type="text" class="form-control" name="eventPostal">
                     </div>
                     <div class="form-group">Upload Poster
                         <br>
