--- a/views/events.ejs
+++ b/views/events.ejs
@@ -105,6 +105,7 @@
                             <div class="filter-content">
                                 <div class="card-body">
                                         <select class="form-control" name="loc">
+                                            <option value="0">Select</option>
                                             <option value="12">Central</option>
                                             <option value="10">Central - Near Orchard</option>
                                             <option value="09">Central - Orchard</option>
