--- a/views/deals.ejs
+++ b/views/deals.ejs
@@ -8,9 +8,8 @@
         <meta name="author" content=""> 
         <title>Auntie - Search for retail goodies</title>         
         <!-- Bootstrap core CSS -->         
-        <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
-        <!-- Custom styles for this template -->         
-        <link href="assets/css/auntie.css" rel="stylesheet"> 
+        <link href="../assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <link href="../assets/css/auntie.css" rel="stylesheet"> 
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
@@ -66,13 +65,13 @@
             <p class="mb-1">&copy; 2019 Auntie.cc</p> 
             <ul class="list-inline"> 
                 <li class="list-inline-item"> 
-                    <a href="#">Privacy</a> 
+                    <a href="/policies#privacy">Privacy</a> 
                 </li>                 
                 <li class="list-inline-item"> 
-                    <a href="#">Terms</a> 
+                    <a href="/policies#terms">Terms</a> 
                 </li>                 
                 <li class="list-inline-item"> 
-                    <a href="#">Support</a> 
+                    <a href="/support">Support</a> 
                 </li>                 
             </ul>             
         </footer>         
@@ -90,4 +89,4 @@
         });
     </script>         
     </body>     
-</html>
+</html>   
