--- a/views/login.ejs
+++ b/views/login.ejs
@@ -69,13 +69,13 @@
             <p class="mb-1">&copy; 2019 Auntie.cc</p> 
             <ul class="list-inline"> 
                 <li class="list-inline-item"> 
-                    <a href="#">Privacy</a> 
+                    <a href="/policies#privacy">Privacy</a> 
                 </li>                 
                 <li class="list-inline-item"> 
-                    <a href="#">Terms</a> 
+                    <a href="/policies#terms">Terms</a> 
                 </li>                 
                 <li class="list-inline-item"> 
-                    <a href="#">Support</a> 
+                    <a href="/support">Support</a> 
                 </li>                 
             </ul>             
         </footer>         
